etc/gateway-api/routes/custom-barbican-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-barbican-gateway-route
  namespace: openstack
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: barbican-https
      namespace: nginx-gateway
  hostnames:
    - "barbican.your.domain.tld"
  rules:
    - backendRefs:
        - name: barbican-api
          port: 9311
