etc/gateway-api/routes/custom-blazar-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-blazar-gateway-route
  namespace: openstack
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: blazar-https
    namespace: nginx-gateway
  hostnames:
  - "blazar.your.domain.tld"
  rules:
    - backendRefs:
      - name: blazar-api
        port: 1234
