etc/gateway-api/routes/custom-cloudformation-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-cloudformation-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: cloudformation
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: cloudformation-https
      namespace: nginx-gateway
  hostnames: [cloudformation.your.domain.tld]
  rules:
    - backendRefs:
        - name: heat-cfn
          port: 8000
