etc/gateway-api/routes/custom-designate-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-designate-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: designate
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: designate-https
      namespace: envoy-gateway
  hostnames:
    - "designate.your.domain.tld"
  rules:
    - backendRefs:
        - name: designate-api
          port: 9001
