etc/gateway-api/routes/custom-heat-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-heat-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: heat
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: heat-https
      namespace: nginx-gateway
  hostnames: [heat.your.domain.tld]
  rules:
    - backendRefs:
        - name: heat-api
          port: 8004
