etc/gateway-api/routes/custom-loki-internal-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-loki-gateway-route
  namespace: monitoring
spec:
  hostnames:
    - internal.loki-gateway.your.domain.tld
  parentRefs:
    - name: flex-gateway
      namespace: envoy-gateway
      sectionName: loki-http
  rules:
    - backendRefs:
        - name: loki-gateway
          port: 80
