etc/gateway-api/routes/custom-manila-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-manila-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: manila
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: manila-https
      namespace: nginx-gateway
  hostnames:
    - "manila.your.domain.tld"
  rules:
    - backendRefs:
        - name: manila-api
          port: 8786
