etc/gateway-api/routes/custom-masakari-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-masakari-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: masakari
spec:
  parentRefs:
  - name: flex-gateway
    sectionName: masakari-https
    namespace: nginx-gateway
  hostnames:
  - "masakari.your.domain.tld"
  rules:
    - backendRefs:
      - name: masakari-api
        port: 15868
