etc/gateway-api/routes/custom-metadata-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-metadata-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: nova-metadata
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: metadata-https
      namespace: nginx-gateway
  hostnames: [metadata.your.domain.tld]
  rules:
    - backendRefs:
        - name: nova-metadata
          port: 8775
