etc/gateway-api/routes/custom-nova-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-nova-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: nova
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: nova-https
      namespace: nginx-gateway
  hostnames: [nova.your.domain.tld]
  rules:
    - backendRefs:
        - name: nova-api
          port: 8774
