etc/gateway-api/routes/custom-prometheus-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-prometheus-gateway-route
  namespace: monitoring
spec:
  hostnames:
    - prometheus.your.domain.tld
  parentRefs:
    - name: flex-gateway
      namespace: envoy-gateway
      sectionName: http
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
