etc/gateway-api/routes/custom-qonos-gateway-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-qonos-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: qonos
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: qonos-https
      namespace: envoy-gateway
  hostnames:
    - "qonos.your.domain.tld"
  rules:
    - backendRefs:
        - name: qonos-api
          port: 8080
