etc/gateway-api/routes/custom-rabbitmq-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq-gateway-route
  namespace: openstack
spec:
  hostnames:
    - rabbitmq.your.domain.tld
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: flex-gateway
      namespace: envoy-gateway
      sectionName: rabbitmq-https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: rabbitmq
      port: 15672
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
