etc/gateway-api/routes/custom-skyline-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-skyline-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: skyline
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: skyline-https
      namespace: envoy-gateway
  hostnames:
    - "skyline.your.domain.tld"
  rules:
    - backendRefs:
        - name: skyline-api
          port: 9999
      sessionPersistence:
        sessionName: SkylineSession
        type: Cookie
        absoluteTimeout: 300s
        cookieConfig:
          lifetimeType: Permanent
