etc/gateway-api/routes/custom-trove-gateway-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-trove-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: trove
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: trove-https
      namespace: nginx-gateway
  hostnames:
    - "trove.your.domain.tld"
  rules:
    - backendRefs:
        - name: trove-api
          port: 8779
