etc/gateway-api/routes/custom-zaqar-gateway-routes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-zaqar-gateway-route
  namespace: openstack
  labels:
    application: gateway-api
    service: HTTPRoute
    route: zaqar
spec:
  parentRefs:
    - name: flex-gateway
      sectionName: zaqar-https
      namespace: nginx-gateway
  hostnames:
    - "zaqar.your.domain.tld"
  rules:
    - backendRefs:
        - name: zaqar-api
          port: 8888
